# wifiMic

./: .gitignore  CMakeLists.txt  sdkconfig
main/: CMakeLists.txt  battery.c  battery.h  file_sender.c  file_sender.h  ftp_client.c  ftp_client.h  http_server.c  http_server.h  index.html  input_gpio.c  input_gpio.h  list_of_errors.c  list_of_errors.h  main.c  nvs.c  nvs.h  pins.h  rgb_led.c  rgb_led.h  script.html  sdcard.c  sdcard.h  settings.c  settings.h  track_rec.c  track_rec.h  utils.c  utils.h  wav.c  wav.h  wifi.c  wifi.h
