idf_component_register(SRCS 
                        "battery.c"
                        "file_sender.c"
                        "ftp_client.c"
                        "http_server.c"
                        "input_gpio.c"
                        "list_of_errors.c"
                        "main.c"
                        "nvs.c"
                        "rgb_led.c"
                        "sdcard.c"
                        "settings.c"
                        "track_rec.c"
                        "utils.c"
                        "wav.c"
                        "wifi.c"
                       EMBED_FILES "index.html")